Implementei mais botões e imagens

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
+    <div class="borda">
     <header>
+        <div class="borda-cima">
+
+        </div>
         <nav class="navbar">
             <a href="http://127.0.0.1:5500/">
                 <img src="imagens/logo.jpg" alt="Logo Cavalos Brasil" class="logo">
@@ -17,16 +21,28 @@
                 <li><a href="#">OFERTAS</a></li>
                 <li><a href="#">COMPRAR</a></li>
                 <li><a href="#">SERVIÇOS</a></li>
-                <li><a href="#">CAVALOS PRO</a></li>
+                <li><a href="#">CAVALOS PRO™</a></li>
                 <li><a href="#">INICIAR SESSÃO</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1></h1>
+     <div class="container">
+        <div class="cavalodiv1">
+            <img src="imagens/cavalo1.jpg" alt="cavalo1" class="cavalo1">
+            <h1 class="titulo">Cavalo Crioulo</h1>
+            <button class="ver-mais">Ver mais</button>
+        </div>
+        <div class="cavalodiv2">
+            <h1 class="titulo2">Escolha um cavalo para a sua necessidade</h1>
+            <button class="botao-vertodos">Ver todos os cavalos</button>
+            <img src="imagens/cavalo2.avif" alt="cavalo2" class="cavalo2">
+        </div>
+    </div>
     </main>
     <footer>
         <p></p>
     </footer>
+</div>
 </body>
 </html>
