Implementei outras imagens, ainda sem ajuste

--- a/index.html
+++ b/index.html
@@ -64,20 +64,45 @@
             <div class="cavalodiv6">
 
             <div class="imagem1">
-                <img src="imagens/cavalo5.jpg" alt="cavalo5" class="cavalo6">
-                <h1 class="cavalos-elite">Cavalos de Elite</h1>
-                <p class="texto-cavalo5">Encontre o cavalo ideal para você. Raça, desempenho e confiança em um só lugar.</p>
-                <button class="saiba-mais">Saiba mais</button>
+                <img src="imagens/cavalo6.jpg" alt="cavalo5" class="cavalo6">
+                <h1 class="cavalos-elite">Experiências</h1>
+                <p class="texto-cavalo5">Conectividade, Conveniência e
+                    Personalização como você nunca viu.</p>
+                <button class="como-funciona">Saiba mais</button>
             </div>
 
             <div class="imagem2">
-                <img src="imagens/cavalo4.jpg" alt="cavalo5" class="cavalo7">
-                <h1 class="cavalos-elite">Cavalos de Elite</h1>
-                <p class="texto-cavalo5">Encontre o cavalo ideal para você. Raça, desempenho e confiança em um só lugar.</p>
-                <button class="saiba-mais">Saiba mais</button>
+                <img src="imagens/cavalo1-.jpg" alt="cavalo5" class="cavalo7">
+                <h1 class="cavalos-elite">Freio de ouro+</h1>
+                <p class="texto-cavalo5">Seguro completo, cuidados veterinários, assistência 24h e você livre de burocracia.</p>
+                <button class="como-funciona">Veja como funciona</button>
+            </div>
             </div>
 
+            <div class="cavalodiv2">
+                <h1 class="titulo3">Conheça mais sobre o Freio de Ouro</h1>
+                <p class="texto2">Saiba mais sobre notícias e serviços que facilitam o seu caminho.</p>
             </div>
+
+            <div class="cavalodiv7">
+
+                <div class="imagem3">
+                    <img src="imagens/cavalo6.jpg" alt="cavalo5" class="cavalo6">
+                    <h1 class="titulo4">Experiências</h1>
+                    <p class="texto-cavalo6">Conectividade, Conveniência e
+                        Personalização como você nunca viu.</p>
+                    <button class="veja-informacao">Saiba mais</button>
+                </div>
+    
+                <div class="imagem4">
+                    <img src="imagens/cavalo1-.jpg" alt="cavalo5" class="cavalo7">
+                    <h1 class="titulo4">Experiências</h1>
+                    <p class="texto-cavalo6">Conectividade, Conveniência e
+                        Personalização como você nunca viu.</p>
+                    <button class="veja-informacao">Saiba mais</button>
+                </div>
+                </div>
+    
         </div>
     </main>
     <footer>
